fix responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -115,6 +115,22 @@ button:active {
   }
 
   .quote-text {
-    font-size: 2.5rem;
+    font-size: 1rem;
+  }
+
+  .long-quote {
+    font-size: 1rem;
+  }
+
+  #author-text {
+    font-size: 1rem;
+  }
+
+  #new-quote-button {
+    font-size: 1rem;
+  }
+
+  .fa-quote-left {
+    font-size: 1rem;
   }
 }
